--- a/lbaw-laravel/public/assets/css/bars.css
+++ b/lbaw-laravel/public/assets/css/bars.css
@@ -109,15 +109,6 @@ html {
     overflow: scroll;
     overflow-x: hidden; }
 
-::-webkit-scrollbar {
-    width: 0px;
-    /* remove scrollbar space */
-    background: transparent;
-    /* optional: just make scrollbar invisible */ }
-
-/* optional: show position indicator in red */
-::-webkit-scrollbar-thumb {
-    background: #FF0000; }
 
 .sidebarButtonAnim {
     animation: rotButAnim 500ms infinite; }
